# vita-app

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  package-lock.json  requirements.txt
VITA'App/: Info.plist  OcrTextView.swift  ScanButton.swift  ScanImageView.swift  ViewController.swift
VITA'App.xcodeproj/: project.pbxproj
analysis/: .pre-commit-config.yaml  BoundingBox.py  DetectedText.py  Makefile  README.md  compare.py  compareAllSophtalmo.py  config.py  csvWriter.py  image.py  main.py  pyproject.toml  structuredOutput.py  utils.py  visualizeOcr.py
analysis/command/: generateStructuredOutput.py  visualizeOcr.py
analysis/commands/: compare.py  gen_struct_out.py  generateStructuredOutput.py  visualizeOcr.py  visualize_ocr.py
analysis/docs/: Makefile  conf.py  index.rst
analysis/models/: BoundingBox.py  Candidate.py  DetectedText.py  Field.py  Point.py  Reader.py  bounding_box.py  cropped_ocr_results.py  detected_text.py  point.py  reader.py
analysis/readerScripts/: findBestReader.py  listOfReaders.py  patterns.py  search.py
analysis/reader_scripts/: find_best_reader.py
analysis/readers/: Field.py  Reader.py  alconEx500.json  alconEx500.py  findBestReader.py  list.py  patterns.py  search.py  sophtalmo.json  sophtalmo.py
analysis/tests/: test_BoundingBox.py  test_bbox.py  test_bounding_box.py  test_crop_region.py  test_fuzzy.py  test_patterns.py  test_search_fuzzy.py  test_search_positioned.py
analysis/utils/: csv_writer.py  getListOfJsonPaths.py  get_detected_text_from_json.py  imageManagement.py  image_management.py
(+30 files in other folders)
