[tool.poetry]
name = "vita-app"
version = "0.1.0"
description = ""
authors = ["Son Pham-Ba <son.phamba@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.4.0"
regex = "^2022.10.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^3.0.3"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
